tests/error/mismatching_yielded_types/main.adept

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    condition := true

    printf(c"Result is %f\n", if condition {
        x i32 = 123
        x
    } elif !condition {
        53
    } else {
        3.1415
    })
}

